imperative-tests/tests/variable_checks/two_symbol_varname.stderr
error: Variable names must be one symbol long
 --> $DIR/two_symbol_varname.rs:6:7
  |
6 |     A{gg:u8},
  |       ^^^^^
