imperative-tests/tests/variable_checks/two_symbol_varname.rs
use imperative::InstructionSet;

#[derive(InstructionSet)]
enum Is {
    #[opcode = "0xffgg"]
    A{gg:u8},
}

fn main() {}
